# axum-tenancy

./: .gitignore  Cargo.toml  README.md
axum-tenancy/: .env  Cargo.toml
axum-tenancy-core/: Cargo.toml
axum-tenancy-core/src/: lib.rs
axum-tenancy-core/src/admin_core/: mod.rs  user_core.rs
axum-tenancy-postgres/: Cargo.toml
axum-tenancy-postgres/migrations/: 20231027033541_User.up.sql
axum-tenancy-postgres/src/: lib.rs
axum-tenancy-postgres/src/admin_postgres/: mod.rs  user_postgres.rs
axum-tenancy-sqlite/: Cargo.toml
axum-tenancy-sqlite/migrations/: 20231027033541_User.up.sql
axum-tenancy-sqlite/src/: lib.rs
axum-tenancy-sqlite/src/admin_sqlite/: mod.rs  user_sqlite.rs
axum-tenancy/migrations/: 20231027033541_User.down.sql  20231027033541_User.up.sql
axum-tenancy/migrations/postgres/: 20231027033541_User.down.sql  20231027033541_User.up.sql
axum-tenancy/migrations/sqlite/: 20231027033541_User.up.sql
axum-tenancy/src/: lib.rs
axum-tenancy/src/admin/: appuser.rs  mod.rs  user.rs
examples/: README.md
examples/postgres/: .env  Cargo.toml
examples/postgres/src/: main.rs
examples/sqlite/: .env  Cargo.toml
examples/sqlite/src/: main.rs
