# MIT License
# 
# Copyright (c) 2024 Dave Warnock
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# 
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "axum-tenancy-postgres"
version = "0.1.0"
edition = "2021"
description = "Multi tenant support for Axum web app."

[dependencies]
postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-uuid-1"] }
sqlx = { version = "0.7.3", features = ["postgres", "any", "runtime-tokio", "tls-rustls", "chrono", "uuid", "macros", "migrate"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
cfg-if = "1.0.0"
anyhow = "1.0.79"
axum-tenancy-core = { path = "../axum-tenancy-core" }


