[package]
name = "axum-tenancy"
version = "0.1.0"
edition = "2021"
description = "Multi tenant support for Axum web app."
homepage = "https://github.com/dave42w/axum-tenancy"
license = "MIT"
keywords = ["tenancy", "tenant", "multi-tenant", "login", "axum"]
categories = [
    "web-programming::http-server",
    "web-programming",
    "database",
    "asynchronous",
]
repository = "https://github.com/dave42w/axum-tenancy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.195", features = ["derive"] }

postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-uuid-1"] }
sqlx = { version = "0.7.3", features = ["postgres", "any", "runtime-tokio", "tls-rustls", "chrono", "uuid", "macros", "migrate"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

